--- a/deep_learning/ass_1/Assignment 1b- Classification using Feed Forward Neural Network.ipynb
+++ b/deep_learning/ass_1/Assignment 1b- Classification using Feed Forward Neural Network.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150 4\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Name : Student_1\n",
@@ -35,7 +43,7 @@
     "X = df.iloc[:,:-1].values\n",
     "Y = df.iloc[:,-1].values\n",
     "\n",
-    "rows,cols= #?, #? \n",
+    "rows,cols= X.shape[0],X.shape[1]\n",
     "# how to get the number of rows and columns in the dataset.\n",
     "# Rows correspond to the number of input instances, columns correspond to the feature of an input\n",
     "\n",
@@ -47,17 +55,7 @@
     "\n",
     "def shuffle_dataset(X,Y):\n",
     "    \n",
-    "    '''\n",
-    "        Write code to shuffle the dataset here. \n",
-    "        \n",
-    "        Args: \n",
-    "            X: Input feature ndarray\n",
-    "            Y: Input values ndarray\n",
-    "            \n",
-    "        Return:\n",
-    "            X and Y shuffled in place\n",
-    "    \n",
-    "    '''\n",
+    "    np.random.shuffle(X,Y)\n",
     "    \n",
     "    pass\n",
     "\n",
@@ -84,18 +82,10 @@
     "class NeuralNetwork(object):\n",
     "    \n",
     "    def __init__(self, input_no, hidden_no, output_no ):\n",
-    "        '''\n",
-    "            Initialize the Neural network model \n",
-    "            Args:\n",
-    "                input_no : no of input features (no of cols)\n",
-    "                hidden_no: no of hidden nodes in the model\n",
-    "                output_no: no of categories our model can classify\n",
-    "                      \n",
-    "        \n",
-    "        '''\n",
-    "        self.h=  # Initialize the hidden layer with zero ?\n",
-    "        self.w1= # Initialize the weights from the input to the hidden layer uniformly with values between 0 and 0.01  ?\n",
-    "        self.b1= # Initialize the biases uniformly with values between 0 and 0.01 equal to the number of hidden nodes  ?\n",
+    "       \n",
+    "        self.h= 1 # Initialize the hidden layer with zero ?\n",
+    "        self.w1= np.random.uniform(0,0.1,# Initialize the weights from the input to the hidden layer uniformly with values between 0 and 0.01  ?\n",
+    "        self.b1= np.random.uniform(0,0.01,# Initialize the biases uniformly with values between 0 and 0.01 equal to the number of hidden nodes  ?\n",
     "        self.w2= # Initialize the weights from the hidden layer to the output uniformly with values between 0 and 0.01 ? \n",
     "        self.b2= # Initialize the biases uniformly with values between 0 and 0.01 equal to the number of output categories ?\n",
     "        pass\n",
@@ -115,6 +105,7 @@
     "                \n",
     "        \n",
     "        '''\n",
+    "        \n",
     "        y_pred=[]\n",
     "        \n",
     "        return y_pred\n",
@@ -217,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
