--- a/deep_learning/ass_1/Assignment1 (1).ipynb
+++ b/deep_learning/ass_1/Assignment1 (1).ipynb
@@ -9,15 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-9eafdc533887>, line 29)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-9eafdc533887>\"\u001b[0;36m, line \u001b[0;32m29\u001b[0m\n\u001b[0;31m    rows,cols= #?, #?\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1030 8\n"
      ]
     }
    ],
@@ -50,7 +49,7 @@
     "X = df.iloc[:,:-1].values\n",
     "Y = df.iloc[:,-1].values\n",
     "\n",
-    "rows,cols= #?, #? \n",
+    "rows,cols= X.shape[0],X.shape[1]\n",
     "# how to get the number of rows and columns in the dataset.\n",
     "# Rows correspond to the number of input instances, columns correspond to the feature of an input\n",
     "\n",
@@ -73,6 +72,7 @@
     "            X and Y shuffled in place\n",
     "    \n",
     "    '''\n",
+    "    np.random.shuffle(X,Y)\n",
     "    \n",
     "    pass\n",
     "\n",
@@ -92,25 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-994b2fde23b6>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-994b2fde23b6>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    self.w = #? Sample an array corresponding to the number of input features (cols) from a uniform distribution between -1 and 1\u001b[0m\n\u001b[0m                                                                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class LinearRegression(object):\n",
     "    def __init__(self):\n",
     "        #Initialize all parameters\n",
     "        \n",
-    "        self.w = #? Sample an array corresponding to the number of input features (cols) from a uniform distribution between -1 and 1\n",
-    "        self.b = #? Sample from a uniform distribution between -1 and 1\n",
+    "        self.w = np.random.randn(rows,cols)#? Sample an array corresponding to the number of input features (cols) from a uniform distribution between -1 and 1\n",
+    "        self.b = np.random.randn(rows,cols) #? Sample from a uniform distribution between -1 and 1\n",
     "    \n",
     "    def forward(self, x):\n",
     "        '''\n",
@@ -121,7 +112,9 @@
     "                y: y = X.w + b  \n",
     "        '''\n",
     "        # Complete this function \n",
-    "        \n",
+    "        y=np.multiply(X,self.w)\n",
+    "        y=y+self.b\n",
+    "        return y\n",
     "        raise NotImplementedError\n",
     "        \n",
     "    \n",
@@ -136,6 +129,7 @@
     "        '''\n",
     "        # Complete this function\n",
     "        \n",
+    "        \n",
     "        raise NotImplementedError\n",
     "\n",
     "def MSELoss(y, ypred):\n",
@@ -146,22 +140,40 @@
     "        Return:\n",
     "            Mean squared error loss\n",
     "    '''\n",
-    "    \n",
+    "    print (y.shape)\n",
+    "    print (ypred.shape)\n",
+    "    MSE=(y-ypred)*(y-ypred)\n",
+    "    MSE.shape\n",
+    "    MSE=np.average(MSE,0)\n",
+    "    return MSE\n",
     "    # Compute the mean squared error \n",
     "    raise NotImplementedError\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-01b19bad88d5>, line 30)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Training with Gradient Descent\n",
+      "(824,)\n",
+      "(1030, 8)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (824,) (1030,8) ",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-01b19bad88d5>\"\u001b[0;36m, line \u001b[0;32m30\u001b[0m\n\u001b[0;31m    y_train_loss= # Print training loss ?\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-1ffbf2b6fadd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mypred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# computes the predicted values\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMSELoss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mypred\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# computes the MSE loss between the actual and predicted values\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m     \u001b[1;31m# store the values of loss per epoch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-22-63576e0bd653>\u001b[0m in \u001b[0;36mMSELoss\u001b[1;34m(y, ypred)\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m     \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mypred\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m     \u001b[0mMSE\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mypred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mypred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m     \u001b[0mMSE\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[0mMSE\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMSE\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (824,) (1030,8) "
      ]
     }
    ],
@@ -195,12 +207,26 @@
     "plt.show()\n",
     "\n",
     "print('Final training loss')   \n",
-    "y_train_loss= # Print training loss ?\n",
+    "y_train_loss= 1# Print training loss ?\n",
     "print('Starting to test')\n",
-    "ytest_pred= # find predictions on test set ?\n",
-    "loss= # compute loss on test set ?\n",
+    "ytest_pred=1 # find predictions on test set ?\n",
+    "loss=1 # compute loss on test set ?\n",
     "print('Final test loss: ' + str(loss))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
